--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,23 @@
-buildscript {
-    repositories {
-        maven { url 'http://dl.bintray.com/jetbrains/intellij-plugin-service' }
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-    }
-}
-
 plugins {
-    id "org.jetbrains.intellij" version "0.2.5"
+    id "java"
+    id "org.jetbrains.kotlin.jvm" version "1.3.21"
+    id "org.jetbrains.intellij" version "0.4.4"
 }
 
-allprojects {
-    apply plugin: 'java'
-    apply plugin: 'kotlin'
-    apply plugin: 'org.jetbrains.intellij'
-    sourceCompatibility = javaVersion
-    targetCompatibility = javaVersion
-    tasks.withType(JavaCompile) { options.encoding = 'UTF-8' }
+version = "1.5.4"
 
-    apply plugin: 'org.jetbrains.intellij'
-    intellij {
-        version ideaVersion
-        plugins 'coverage'
-        pluginName 'CodeGlance'
-        updateSinceUntilBuild = false
-    }
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
+tasks.withType(JavaCompile) { options.encoding = 'UTF-8' }
 
-    test {
-        useTestNG()
-    }
+intellij {
+    version "14"
+    pluginName 'CodeGlance'
+    updateSinceUntilBuild = false
+}
+
+test {
+    useTestNG()
 }
 
 sourceSets {
@@ -43,10 +30,6 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testCompile "org.testng:testng:6.8.5"
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '3.3'
 }
