--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
     id "java"
-    id "org.jetbrains.kotlin.jvm" version "1.3.21"
-    id "org.jetbrains.intellij" version "0.4.4"
+    id "org.jetbrains.kotlin.jvm" version "1.3.31"
+    id "org.jetbrains.intellij" version "0.4.8"
 }
 
-version = "1.5.4"
+version = "2.0.0"
 
 sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
@@ -12,7 +12,7 @@ tasks.withType(JavaCompile) { options.encoding = 'UTF-8' }
 
 intellij {
     version "14"
-    pluginName 'CodeGlance'
+    pluginName 'MiniMap'
     updateSinceUntilBuild = false
 }
 
